--- a/content/post/2019-12-12-ncwss.md
+++ b/content/post/2019-12-12-ncwss.md
@@ -8,7 +8,7 @@ tags:
 - RStudio
 - Markdown
 - Talk
-title: Using RStudio for Visualization and Analysis of Weed Science 
+title: Using RStudio for visualization and analysis of weed science 
 toc: true
 ---
 
