--- a/content/post/ncwss-text-mining/index.Rmd
+++ b/content/post/ncwss-text-mining/index.Rmd
@@ -1,14 +1,14 @@
 ---
-title: "North Central Weed Science Society Meeting Proceedings, an Overview of the XXI Century Using Text Analysis"
+title: "North Central Weed Science Society meeting proceedings, an overview of the XXI century using text analysis"
 author: 
 - Maxwel C Oliveira
-date: 2021-02-13T21:09:14-05:00
+date: 2021-02-14T21:09:14-05:00
 categories: ["Text Analysis"]
 tags: ["data analysis"]
 output: html_document
 thumbnail: http://ncwss.org/wp-content/uploads/2015/03/ncwss-map1.jpg
 --- 
-
+ 
 
 
 ```{r setup, include=FALSE}
@@ -21,12 +21,12 @@ knitr::opts_chunk$set(
 
 
 
-This text analysis is part of my abstract (co-authored with [Rodrigo Werle](https://twitter.com/WiscWeeds) and Sarah [Marinho](https://twitter.com/SarahMarinho20)) presented at the North Central Weed Science Society (**NCWSS**) meeting that was held remotely in December 2020. Here I am presenting part of that abstract, the **weed species** ranked among top 100 words from 2001 through 2020. I am adding to this analysis the 2020 meeting proceedings. Also, I am running the text analysis with much less coding that I have done for the **NCWSS** meeting. That is what I am going to show in this analysis. If you just want to see the figure, please scroll to the bottom of this page. 
+This text analysis is part of my [poster](NCWSS_POSTER.pdf) (co-authored with [Rodrigo Werle](https://twitter.com/WiscWeeds) and [Sarah Marinho](https://twitter.com/SarahMarinho20)) presented at the 2020 Virtual North Central Weed Science Society [NCWSS](http://ncwss.org/) annual meeting (December 2020). Here I am presenting part of that abstract focused on **weed species** ranked amongst the top 100 words from 2001 through 2020 (I am adding the 2020 meeting proceedings to this analysis). I am also running the text analysis with less coding than for the 2020 **NCWSS** meeting which is what I am going to show in this analysis. If you are only interested in the final figure, please scroll to the bottom of this page.
 
 ![](ncwss.jpg)
 
 
-First we have to load the packages needed for this analysis. Please run the codes below: 
+First we have to load the packages needed for this analysis. Please run the codes below:
 
 
 ```{r}
@@ -38,9 +38,9 @@ library(ggtext)
 # if you do not have any of these packages installed, please run install.packages("name_of_the_package")
 ```
 
-I have downloaded all **NCWSS** proceedings and added into a folder named docs (name of your choice). You can find all PDFs in "code" below the post title (folder docs). 
+I have downloaded all **NCWSS** proceedings and added into a folder named “docs” (you can name the folder as you choose). You can find all PDFs in "code" (see below the post title - folder "docs").
 
-I used the *str_c* function to get all PDFs, which is into the folder "docs". The pdfs output contains the path for all 20 **NCWSS** proceedings.
+I used the *str_c* function to get all PDFs, which are in the folder “docs”. ThePDFs output contains the path for all 20 **NCWSS** proceedings.
 
 ```{r name-pdfs}
 pdfs <- str_c("docs", "/", list.files("docs", pattern = "*.pdf"), 
@@ -48,14 +48,14 @@ pdfs <- str_c("docs", "/", list.files("docs", pattern = "*.pdf"),
 pdfs 
 ```
 
-Next you will named all these pdfs. If you run the code below, *list.files* will keep the PDFs names as shown in the code above. 
+Next you will name all PDFs. If you run the code below, *list.files* will keep the PDFs names as shown in the code above.
 
 ```{r}
 pdf_names <- list.files("docs", pattern = "*.pdf")
 pdf_names
 ```
 
-Here is where the magic occurs, I will use the function *map* of the package **purrr** (tidyverse core). Using *map* function sames a lot of coding and time.
+Here is where the magic occurs, I will use the function *map* of the package **purrr** (tidyverse core). Using *map* function saves coding and time.
 
 ![](https://media.giphy.com/media/l2YWs1NexTst9YmFG/giphy.gif)
 
@@ -63,15 +63,17 @@ Here is where the magic occurs, I will use the function *map* of the package **p
 pdfs_text <- map(pdfs, pdftools::pdf_text)
 ```
 
+
 This "magic" is called iteration, so instead of running the analysis by each year we can run it all together. Running *pdfs_text* alone you get you all proceedings organized as a list. I am not running *pdfs_text* here because it is a large output. Nonetheless, *pdfs_text* is not tidy for the analysis yet.
 
-The iteration with *map* function should be proceeded with a *tibble* function to organize the proceedings by each year.
+The iteration with *map* function should be proceeded with a *tibble* function to organize the proceedings of each year.
 
 ```{r}
 pdf <- tibble(document = pdf_names, text = pdfs_text) %>% 
   mutate(year = 2001:2020) # adding a column for each year
 pdf
 ```
+
 As you can see in the tibble (data frame) above, each proceeding is stored as a list by each year (e.g., <chr [248]>). 
 
 Now that we have a tidy tibble, we can proceed with the [tokenization](https://www.tidytextmining.com/tidytext.html) using the function *unnest_tokens*.
@@ -91,7 +93,7 @@ pdf1 %>%
   slice_head(n = 10)
 ```
 
-You have notice that I used *mutate* function to change 2,4-D to "twofourd" because tokenization would split it in 2, 4 and D. Also because of their dual names, I have made marestail = horseweed. 
+Notice that I used *mutate* function to change 2,4-D to "twofourd" because tokenization would split it in 2, 4 and D. Because the species has more than one common name, I treat marestail = horseweed.
 
 Next we need to remove the "stopwords". Stopwords are words like "in", "and", "at", "their", "about" etc. The function *get_stopwords* from tidytext package has five "stopword" sources, I will add them all and stored in *stopwords*. See below:
 
@@ -120,6 +122,7 @@ The *get_stopwords* function with all sources attributes is not enough to remove
 source("stop_words.R")
 ```
 
+
 I have saved it as **stop_tibble**, which is used also with *anti_join* function. The *anti_join* function as described above will remove all "stopwords" in **stop_tibble** from **pdf2**. Notice that here I am also using mutate to bring back 2,4-D. 
 
 ```{r cleaning}
@@ -128,7 +131,7 @@ pdf3 <- pdf2 %>%
   mutate(word = str_replace(word, "twofourd", "2,4-d")) # bring back 2,4-d
 ```
 
-Next I will use functions to *count* words over the years, *arrange* it as descending, *group_by* year, rank top 100 words (*row_number*) and *filter* the top 100 words by each year. 
+Next I will use functions to *count* words over the years, *arrange* it as descending, *group_by* year, rank top 100 words (*row_number*) and *filter* the top 100 words by year. 
 
 ```{r}
 pdf4 <- pdf3 %>% 
@@ -139,7 +142,7 @@ pdf4 <- pdf3 %>%
   filter(rank <= 100)
 ```
 
-Now I have the top 100 words by each year:
+Now I have the top 100 words for each year (**NCWSS** proceedinds):
 
 ```{r}
 pdf4 %>% 
@@ -161,7 +164,6 @@ pdf5 <- pdf4 %>%
 pdf5 %>% 
   slice_head(n = 5)
 ```
-
 
 Now the tibble is ready. Then, I will proceed with data visualization. First I will set the font family, colors and theme. 
 
@@ -216,7 +218,7 @@ cols <- c("#F2D9F3", "#F2D9F3", "#00E5E5", "#DEB887",
 ```
 
 
-Then I will plot the data. The idea here is to see the difference between weeds from top 100 words in 2001 and 2020.
+Then I will plot the data. The idea here is to see the trend in weeds within the top 100 words from 2001 through 2020.
 
 
 ```{r}
@@ -260,7 +262,7 @@ ggsave("top_weeds.png", width = 40, height = 60, dpi=400, limitsize = FALSE, fig
 ```
 
 
-Check the figure carefully. What were you doing in 2001? What do you think have changed across 20 years? What is the same? Make your own conclusions.
+Check the figure carefully. What were scientists in the society focused on in 2001? What has changed in 20 years? What hasn’t? Draw your own conclusions.
 
 
 ![](top_weeds.png)
@@ -272,3 +274,6 @@ This figure was adapted from one of [JaredBraggins](https://twitter.com/JaredBra
 
 Click [here]((https://juliasilge.com/blog/learn-tidytext-learnr/)) to learn more about Tidy Text with Julia Silge.
 
+---
+Thanks to Rodrigo Werle for reviewing this post.
+---
