--- a/content/post/ncwss-text-mining/index.Rmd
+++ b/content/post/ncwss-text-mining/index.Rmd
@@ -262,7 +262,7 @@ ggsave("top_weeds.png", width = 40, height = 60, dpi=400, limitsize = FALSE, fig
 ```
 
 
-Check the figure carefully. What were scientists in the society focused on in 2001? What has changed in 20 years? What hasn’t? Draw your own conclusions.
+Check the figure carefully. What were scientists in the society focused in 2001? What has changed in 20 years? What hasn’t? Draw your own conclusions.
 
 
 ![](top_weeds.png)
